--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script: bundle exec rspec spec/examples
 bundler_args: --without=debug
 before_install:
   - sudo sh -c "echo 'JVM_OPTS=\"\${JVM_OPTS} -Djava.net.preferIPv4Stack=false\"' >> /usr/local/cassandra/conf/cassandra-env.sh"
+  - test -f "/usr/local/cassandra/etc/cassandra-env.sh" && sudo rm -f /usr/local/cassandra/conf/cassandra-env.sh && sudo ln -s /usr/local/cassandra/etc/cassandra-env.sh /usr/local/cassandra/conf/cassandra-env.sh
   - sudo service cassandra start
+  - sleep 3
 after_failure: 'ls /var/log/cassandra; tail -n 100 /var/log/cassandra/system.log'
-services:
-  - cassandra
